--- a/crates/mc-mappings/Cargo.toml
+++ b/crates/mc-mappings/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-lazy_static = "1.4.0"
-rand = "0.8.5"
+reqwest = { version = "0.11.14",features=["blocking"] }
+map-gen = {path = "../map-gen"}
 [dependencies]
 jni ={path="../jni"}
